<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/serviceBackGround"
        android:paddingBottom="8dp"
>

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view"
            android:layout_marginTop="8dp"
            android:text="@string/start"
    />

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_view"
            android:layout_marginTop="8dp"
            android:text="@string/stop"
    />

    <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/button_trim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toBottomOf="@+id/text_view"
            android:layout_marginTop="8dp"
            android:text="@string/trim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />

    <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="18sp"
            android:padding="16dp"
            android:background="#e7111111"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"/>

    <net.dagzo.speedread.TrimView
            android:id="@+id/trim_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
    />

</android.support.constraint.ConstraintLayout>